--- a/app/assets/stylesheets/modules/map-filters.css.scss
+++ b/app/assets/stylesheets/modules/map-filters.css.scss
@@ -58,6 +58,7 @@
 }
 
 .export-button {
+  line-height: 33px;
   width: 170px;
   text-align: center;
 }
