--- a/app/assets/stylesheets/modules/reset-button.css.scss
+++ b/app/assets/stylesheets/modules/reset-button.css.scss
@@ -6,7 +6,7 @@
   margin: 0 0 3px 20px;
   width: 25px;
 
-  & img {
+  img {
     vertical-align: middle;
   }
 }
